syntax = "proto3";

package pb;

import "google/api/annotations.proto";

service Sider {
    rpc Set(SetRequest) returns (SetResponse) {
        option (google.api.http) = {
            post: "/v1/sider/set"
            body: "*"
        };
    }
    // Get the value of the key.
    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            post: "/v1/sider/get"
            body: "*"
        };
    }
    rpc Update(UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            post: "/v1/sider/update"
            body: "*"
        };
    }
    rpc Remove(RemoveRequest) returns (RemoveResponse) {
        option (google.api.http) = {
            post: "/v1/sider/remove"
            body: "*"
        };
    }
    rpc Keys(KeysRequest) returns (KeysResponse) {
        option (google.api.http) = {
            post: "/v1/sider/keys"
            body: "*"
        };
    }
    rpc TTL(TTLRequest) returns (TTLResponse) {
        option (google.api.http) = {
            post: "/v1/sider/ttl"
            body: "*"
        };
    }
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key    = 1;
    bytes value   = 2;
    int64 expires = 3;
}

message SetRequest {
    string key    = 1;
    bytes value   = 2;
    int64 expires = 3;
}

message SetResponse {

}

message UpdateRequest {
    string key    = 1;
    bytes value   = 2;
}

message UpdateResponse {

}

message RemoveRequest {
    string key = 1;
}

message RemoveResponse {
}

message KeysRequest {
    string pattern = 1;
}

message KeysResponse {
    repeated string key = 1;
}

message TTLRequest {
    string key = 1;
}

message TTLResponse {
    int64 time = 1;
}